[package]
name = "backup"
version = "0.1.2"
edition = "2021"
authors = ["Karbob <karbobc@gmail.com>"]
description = "Backup Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
