[package]
name = "backup"
version = "0.3.2"
edition = "2021"
authors = ["Karbob <karbobc@gmail.com>"]
description = "A backup tool using rclone"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "env", "wrap_help"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.14", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
